<resources>
    <string name="app_name">Cow Shelter Finder</string>
    <string name="email">Enter Your Email</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="enter_product_name">Enter Product name</string>
    <string name="short_description">Short Description</string>
    <string name="add_product">Add Product</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="more_options">More Options</string>
    <string name="help_feedback">Contact Us</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="my_profile">Profile</string>
    <string name="about_us">About us</string>
    <string name="yourID">"Your Id: "</string>
    <string name="hello">"Hello , "</string>
    <string name="noShelterFound">No Shelter Near to your location</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="user_not_found">User not found</string>
    <string name="incrocctPassword">Incorrect Password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterNumber">Enter Number</string>
    <string name="signup">Sign up</string>
    <string name="done">Success</string>
    <string name="locationNotFound">Unable to get location. Try again later.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="enable_location">Please enable location services</string>
    <string name="please_wait">Please wait</string>
    <string name="enterName">Enter Name</string>
    <string name="noProductFound">No product Found</string>
    <string name="product_created">Product Created</string>
    <string name="uploadImage">Upload Image</string>
    <string name="quantity">Enter Quantity</string>
    <string name="enterPrice">Enter Price</string>
    <string name="enterDescription">Enter Description</string>
    <string name="enterProductName">Enter Product name</string>
    <string name="noMediaSelected">No media selected</string>
    <string name="location_updated">Location Updated</string>
</resources>